--- a/stepflow-rs/Cargo.toml
+++ b/stepflow-rs/Cargo.toml
@@ -25,7 +25,7 @@ glob = "0.3"
 matchit = "0.8.4"
 hex = "0.4"
 indexmap = { version = "2.8.0", features = ["serde"] }
-insta = { version = "1.34.0", features = ["glob", "yaml" ] }
+insta = { version = "1.34.0", features = ["glob", "yaml", "filters" ] }
 insta-cmd = "0.6.0"
 nix = { version = "0.29", features = ["process", "signal"] }
 openai-api-rs = { version = "6.0.6", features = ["rustls"], default-features = false }
@@ -74,6 +74,7 @@ utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
 uuid = { version = "1.16.0", features = ["v4", "serde"]}
 walkdir = "2.5.0"
 which = { version = "7.0.3", features = ["tracing"] }
+strum = { version = "0.26", features = ["derive"] }
 
 # Enable max optimizations for dependencies, but not for our code
 [profile.dev.package."*"]
