ci: Update release scripts
1. Allow re-running the prepare step by overwritnig the release branch.
2. Have the prepare script trigger CI and PR workflows.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  workflow_dispatch:
 
 # Limit concurrency to a single run per branch (ref).
 concurrency:
