--- a/.github/workflows/release_prepare.yml
+++ b/.github/workflows/release_prepare.yml
@@ -82,6 +82,20 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Dispatch CI workflow
+        run: |
+          echo "🔄 Dispatching CI workflow for release branch..."
+          gh workflow run ci.yml
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Dispatch PR workflow
+        run: |
+          echo "🔄 Dispatching PR workflow for release branch..."
+          gh workflow run pr.yml
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Summary
         run: |
           echo "## Release Preparation Complete" >> $GITHUB_STEP_SUMMARY
@@ -94,5 +108,6 @@ jobs:
           echo "### Next Steps" >> $GITHUB_STEP_SUMMARY
           echo "1. Review the generated PR" >> $GITHUB_STEP_SUMMARY
           echo "2. Check the changelog entries" >> $GITHUB_STEP_SUMMARY
-          echo "3. Merge the PR when ready" >> $GITHUB_STEP_SUMMARY
-          echo "4. The release will be automatically tagged and built" >> $GITHUB_STEP_SUMMARY
+          echo "3. The CI and PR workflows have been automatically dispatched" >> $GITHUB_STEP_SUMMARY
+          echo "4. Merge the PR when ready" >> $GITHUB_STEP_SUMMARY
+          echo "5. The release will be automatically tagged and built" >> $GITHUB_STEP_SUMMARY
